# crawler

./: .env.example  .env.i7-13700k  .env.i7-13700k.template  .gitignore  CLAUDE.md  QUERY_PARAMETERS_SOLUTION.md  README.md  README_SECURITY.md  TIMEOUT_IMPLEMENTATION.md  TRANSPORT_MIGRATION.md  demo_hybrid_search.py  demo_working_hybrid.py  dev.sh  docker-compose.i7-13700k.yaml  docker-compose.yaml  docs.md  pyproject.toml  test_cancellation.py  test_crawl_dir.py  test_crawl_dir_simple.py  test_embeddings.py  test_query_params.py  test_query_params_simple.py  test_unified_dimensions.py  test_unified_ingestion.py
data/neo4j/: server_id
data/qdrant/: raft_state.json
docs/: fastmcp_query_parameters.md  neo4j-integration-code-review.md  neo4j-performance-optimizations.md
examples/: fastmcp_query_parameters.py
knowledge_graphs/: __init__.py  ai_script_analyzer.py  hallucination_reporter.py  hardware_optimized_config.py  hardware_optimized_i7_13700k.py  knowledge_graph_validator.py  parse_repo_into_neo4j.py  performance_example.py  performance_monitor.py  query_pagination.py
scripts/: generate_secure_config.py  optimize_i7_13700k.sh  optimize_i7_3770k.sh
src/: crawl4ai_mcp.py  utils.py
src/core/: cancellation_middleware.py  crawling.py  processing.py  server.py  timeout_middleware.py  timeout_utils.py  validation.py
src/resources/: __init__.py  sources.py
src/tools/: __init__.py  crawling_tools.py  kg_tools.py
src/utils/: __init__.py  async_qdrant_utils.py  (+7 more)
unified_ingestion/: __init__.py  data_models.py  database_ingesters.py  extractors.py  pipeline.py
(+27 files in other folders)
